add autoplay and loop mode to the video

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- START HEADER -->
         <header id="header">
             <!-- ADD autoplay and loop atrribute to video tag -->
-            <video muted id="myVideo">
+            <video muted autoplay loop id="myVideo">
                 <source src="img/discussing_features.mp4" type="video/mp4">
             </video>
             <div class="overlay"></div>
