added loading spinner

--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
             </div>
         </section>
         <!-- END CONTACT US -->
+        <!-- START LOADING -->
+		<div class="parentLoading">
+			<div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+		</div>
+		<!-- END LOADING -->
         <!-- JQUERY -->
         <script defer src="js/jquery-3.3.1.min.js"></script>
         <!-- My Script -->
